--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dot": "^1.1.3",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
