--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "env": "^0.0.2",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14"
   }
 }
