--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "dot": "^1.1.3",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.14"
   }
 }
