--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.2.0"
   }
 }
