--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^9.1.3",
     "mongoose": "^6.0.14",
     "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.2.0"
+    "swagger-ui-express": "^4.2.0",
+    "winston": "^3.3.3"
   }
 }
