--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/eslint-parser": "^7.16.3",
     "bcryptjs": "^2.4.3",
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
     "dot": "^1.1.3",
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
+    "eslint": "^8.4.1",
+    "eslint-config-node": "^4.1.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
