--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "mocha",
     "start": "node server.js",
     "lint": "eslint"
-
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "mongoose": "^6.0.14",
+    "nodemailer": "^6.7.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
     "winston": "^3.3.3"
