--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mocha": "^9.1.3",
     "mongoose": "^6.0.14",
     "nodemailer": "^6.7.2",
+    "redis": "^4.0.1",
+    "redis-server": "^1.2.2",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.2.0",
     "winston": "^3.3.3"
